RESOLVED FIXED37351
Cannot build with build-webkit --webkit2
https://bugs.webkit.org/show_bug.cgi?id=37351
Summary Cannot build with build-webkit --webkit2
Steven Riggins
Reported 2010-04-09 13:24:45 PDT
/Users/USER/Projects/WebKit/WebKit2/Shared/mac/UpdateChunk.cpp: In constructor 'WebKit::UpdateChunk::UpdateChunk(const WebCore::IntRect&)': /Users/USER/Projects/WebKit/WebKit2/Shared/mac/UpdateChunk.cpp:49: error: 'vm_allocate' was not declared in this scope /Users/USER/Projects/WebKit/WebKit2/Shared/mac/UpdateChunk.cpp: In destructor 'WebKit::UpdateChunk::~UpdateChunk()': /Users/USER/Projects/WebKit/WebKit2/Shared/mac/UpdateChunk.cpp:55: error: 'vm_deallocate' was not declared in this scope /Users/USER/Projects/WebKit/WebKit2/Platform/mac/WorkQueueMac.cpp: In static member function 'static void WorkQueue::EventSource::cancelHandler(void*)': /Users/USER/Projects/WebKit/WebKit2/Platform/mac/WorkQueueMac.cpp:74: error: 'mach_port_mod_refs' was not declared in this scope /Users/USER/Projects/WebKit/WebKit2/Platform/mac/WorkQueueMac.cpp:78: error: 'mach_port_deallocate' was not declared in this scope xcode 3.2.2 (3.2GM), Mac Pro, 10.6.3 WebKitTools/Scripts/build-webkit --webkit
Attachments
Patch (1.52 KB, patch)
2010-04-09 14:40 PDT, Sam Weinig
darin: review+
Steven Riggins
Comment 1 2010-04-09 14:10:43 PDT
57355 same issue
Sam Weinig
Comment 2 2010-04-09 14:40:23 PDT
Created attachment 52990 [details] Patch Not sure why it is not working, but it won't hurt to #include these files again.
Steven Riggins
Comment 3 2010-04-09 15:14:13 PDT
Builds with this patch.
Sam Weinig
Comment 4 2010-04-09 15:50:37 PDT
Fixed in r57375.
Note You need to log in before you can comment on or make changes to this bug.