Fix for https://bugs.webkit.org/show_bug.cgi?id=37351 Cannot build with build-webkit --webkit2

Reviewed by Darin Adler.

Add some headers that it seems others are not getting
already.

* Platform/mac/WorkQueueMac.cpp: #inlude <mach/mach_port.h>
* Shared/mac/UpdateChunk.cpp: #inlude <mach/vm_map.h>



git-svn-id: svn://svn.chromium.org/blink/trunk@57375 bbb929c8-8fbe-4397-9dbb-9b2b20218538