third_party/WebKit/WebKit2/Shared/mac/UpdateChunk.cpp
@@ -31,6 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Attachment.h"
 #include "WebCoreTypeArgumentMarshalling.h"
 #include <WebCore/FloatRect.h>
+#include <mach/vm_map.h>
 #include <wtf/RetainPtr.h>
 
 using namespace WebCore;
